--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -1,9 +1,9 @@
 {
   "type": "sqlite",
   "database": "./src/database/database.sqlite",
-  "migrations": ["./src/database/migrations/*.ts"],
-  "entities": ["./src/database/entities/*.ts"],
+  "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
+  "entities": ["./src/modules/**/infra/typeorm/entities/*.ts"],
   "cli": {
-    "migrationsDir": "./src/database/migrations"
+    "migrationsDir": "./src/shared/infra/typeorm/migrations"
   }
 }
