--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
@@ -16,6 +16,7 @@
     "pg": "^8.4.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.0",
+    "tsyringe": "^4.3.0",
     "typeorm": "^0.2.28",
     "yup": "^0.29.3"
   },
@@ -25,6 +26,7 @@
     "@types/yup": "^0.29.8",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0-pre.63",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.3"
   }
 }
